Renamed controllers of dependencies example

--- a/examples/dependencies/index.html
+++ b/examples/dependencies/index.html
@@ -3,8 +3,8 @@
 		<script type="text/javascript" src="head/jquery.js"></script>
 		<script type="text/javascript" src="head/lazyload.js"></script>
 		<script type="text/javascript" src="../../ann.js"></script>
-		<script type="text/javascript" src="lib/turret.js"></script>
-		<script type="text/javascript" src="lib/turret_box.js"></script>
+		<script type="text/javascript" src="lib/turret/controller.turret.js"></script>
+		<script type="text/javascript" src="lib/turret/box/controller.box.js"></script>
 	</head>
 	<body>
 		<section class="hello">Hello!</section>
