--- a/examples/new_ann/index.html
+++ b/examples/new_ann/index.html
@@ -1,6 +1,39 @@
 <html>
 	<head>
-		<script src="../../lib/deps/require/require.js" data-main="../../bootstrap"></script>
+		<script src="../../app/ann.js"></script>
+		<script src="../../lib/deps/require/require.js"></script>
+		<script>
+			AnnJS.start({
+				core : {
+					debug			: true, //allow debugger
+					language		: null
+				},
+				loader : {
+					baseUrl: '../..',
+					paths: {
+						modules : 'lib/modules',
+						mixins : 'lib/mixins',
+
+						deferred: 'lib/deps/deferred/deferred',
+						jquery  : 'lib/deps/jquery/jquery',
+						pubsub  : 'lib/deps/pubsub/pubsub',
+
+						tmpl             : 'tmpl',
+
+						'less-library'  : 'lib/deps/less/less',
+
+						//require.js plugins
+						text    : 'lib/deps/require/text',
+						less    : 'lib/deps/require/less'
+					},
+					shim: {
+						'less-library'  : {
+							exports : 'less'
+						}
+					}
+				}
+			});
+		</script>
 	</head>
 	<body>
 	</body>
