--- a/examples/new_ann/index.html
+++ b/examples/new_ann/index.html
@@ -40,5 +40,6 @@
 	</head>
 	<body>
 		<div class="annjs" data-namespace="testing"></div>
+		<div class="annjs" data-namespace="uber_testing"></div>
 	</body>
 </html>
